cluster/apps/pihole/pihole-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  selector:
    app: pihole
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
  - name: dns-tcp
    port: 53
    protocol: TCP
  - name: dns-udp
    port: 53
    protocol: UDP
  - name: bootp
    port: 67
    protocol: UDP
