cluster/apps/pihole/pihole-udp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: network-services
    metallb.universe.tf/allow-shared-ip: pihole-tcp
  name: pihole-udp
  namespace: pihole
spec:
  selector:
    app: pihole
  sessionAffinity: None
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 192.168.178.124
  ports:
  - name: dns-udp
    port: 53
    protocol: UDP
  - name: client-udp
    port: 67
    protocol: UDP
